<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ChangePassword" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/topbarHeight"
        android:layout_alignParentLeft="true"
       
        android:background="@drawable/top" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"   style="@style/fontstyle"
            android:layout_centerVertical="true"      android:textAllCaps="true"
            android:text="@string/title_activity_forgor_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/yellow"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"      android:textAllCaps="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:textColor="@color/white"   style="@style/butStyle"
            android:background="@drawable/back"
            android:textAppearance="?android:attr/textAppearanceSmall"
           
            android:text="@string/BACK" />

    </RelativeLayout>

     <EditText
        android:id="@+id/editTextChangePsw"
        style="@style/edittextWhitebg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="15dp"  android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/box_tv_1"
        android:ems="10"
        android:maxLength="50"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        android:padding="12dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_send"
          style="@style/butStyle"
        android:layout_width="match_parent"
       
        android:layout_alignLeft="@+id/editTextChangePsw"
        android:layout_alignRight="@+id/editTextChangePsw"
        android:layout_below="@+id/editTextChangePsw"
        android:layout_marginTop="18dp"
       
        android:text="SEND"
      
        
        
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceSmall"
              
              
         />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:textColor="@color/yellow"
       android:layout_margin="10dp"
               android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"   style="@style/fontstyle"
        android:layout_marginTop="17dp"
        android:text="@string/forgotpswText"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>