<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".TermsAndService" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/topbarHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/top" >
        
        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="6dp"
            android:textStyle="bold"
            style="@style/butStyle"
            android:textColor="@color/white"
            android:background="@drawable/back"
            android:textAppearance="?android:attr/textAppearanceSmall"
           
            android:text="@string/BACK" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"

     android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"   style="@style/fontstyle"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_feedback"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/yellow"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_alignParentRight="true"    android:layout_margin="3dp"
           style="@style/butStyle"
            android:background="@drawable/button_small"
            android:text="Send" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"   style="@style/fontstyle"
        android:layout_margin="10dp"
        android:text="@string/title_activity_feedback"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:textColor="@color/yellow"
       android:layout_below="@+id/textView2"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
               android:layout_alignParentLeft="true"
        style="@style/fontstyle"
        
        android:text="@string/feedbacktext"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/box_tv_3_"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:hint="Description"
      
      android:gravity="left|top"
      style="@style/edittextWhitebg"
   
        android:ems="10"
        android:inputType="textMultiLine" >

       
    </EditText>

</RelativeLayout>