<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ChangePassword" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/topbarHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/top" >

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"   style="@style/fontstyle"
            android:layout_margin="6dp"
            android:background="@drawable/back"
            android:text="@string/BACK"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"   style="@style/fontstyle"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_change_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/yellow"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editTextChangePsw"
        style="@style/edittextWhitebg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_margin="15dp"
        android:background="@drawable/box_tv_1"
        android:ems="10"
        android:maxLength="12"
        android:singleLine="true"
        android:hint="Old  Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
       >
    </EditText>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextChangePsw"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/box_tv"
        android:weightSum="2" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1" >

            <EditText
                android:id="@+id/editText_newpsw"
                style="@style/edittextWhitebg"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
              android:maxLength="12"
        android:singleLine="true"
     
                android:hint="New Password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
           
                android:textColorHint="@color/hintColor"
               />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
              android:background="@drawable/line" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1" >

            <EditText
                android:id="@+id/editText_retype"
                style="@style/edittextWhitebg"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"  android:maxLength="12"
        android:singleLine="true"
     
             
                android:hint="Retype Password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
      
               />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_changpsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_below="@+id/tableLayout1"
        android:layout_marginTop="14dp"
        android:background="@drawable/button"
        android:gravity="center"   style="@style/fontstyle"
        android:text="@string/title_activity_change_password"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_below="@+id/button_changpsw"
        android:layout_marginTop="14dp"   style="@style/fontstyle"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/Cancel"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>